// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Triptych CPU language-neutral conformance > matches 'boot-overlay-serial' > boot-overlay-serial 1`] = `
"triptych-cpu-result-v1
fixture=boot-overlay-serial
stop=halt
steps=7
tstates=60
boot-rom-enabled=0
cpu.a=165
cpu.halted=1
cpu.iff1=0
cpu.iff2=0
cpu.imode=0
cpu.pc=14
cpu.r=7
ram-sha256=3efdb92ef69bb157f372a3692535ec12d074283ac08adcdf73c7c53191661269
ram.000d=76
drives=0
serial=41
io.0=w,4100,41
io.1=w,a520,a5
"
`;

exports[`Triptych CPU language-neutral conformance > matches 'cold-boot-disk-persistence' > cold-boot-disk-persistence 1`] = `
"triptych-cpu-result-v1
fixture=cold-boot-disk-persistence
stop=halt
steps=817
tstates=8220
boot-rom-enabled=0
cpu.halted=1
cpu.pc=39
cpu.sp=65534
ram-sha256=cb96212d9ebe35754dc34cfea4e83c9c6fe9747d2957ed05757ef8d5b405a767
ram.0000=3e42d300afd3113e01d312afd313d314d3153e02d31006803e5ad31610fc3e03d3103e50d30076
ram.ff00=3ea5d320c30000
drives=1
drive.0-sha256=65f84ffffac79df844fa3bab551fbffe0784993fad1a928adf86ccb1d4f65cbb
serial=4250
io.0=w,0011,00
io.1=w,0012,00
io.2=w,0013,00
io.3=w,0014,00
io.4=w,0015,00
io.5=w,0110,01
io.6=r,0116,3e
io.7=r,3e16,42
io.8=r,4216,d3
io.9=r,d316,00
io.10=r,0016,af
io.11=r,af16,d3
io.12=r,d316,11
io.13=r,1116,3e
io.14=r,3e16,01
io.15=r,0116,d3
io.16=r,d316,12
io.17=r,1216,af
io.18=r,af16,d3
io.19=r,d316,13
io.20=r,1316,d3
io.21=r,d316,14
io.22=r,1416,d3
io.23=r,d316,15
io.24=r,1516,3e
io.25=r,3e16,02
io.26=r,0216,d3
io.27=r,d316,10
io.28=r,1016,06
io.29=r,0616,80
io.30=r,8016,3e
io.31=r,3e16,5a
io.32=r,5a16,d3
io.33=r,d316,16
io.34=r,1616,10
io.35=r,1016,fc
io.36=r,fc16,3e
io.37=r,3e16,03
io.38=r,0316,d3
io.39=r,d316,10
io.40=r,1016,3e
io.41=r,3e16,50
io.42=r,5016,d3
io.43=r,d316,00
io.44=r,0016,76
io.45=r,7616,00
io.46=r,0016,00
io.47=r,0016,00
io.48=r,0016,00
io.49=r,0016,00
io.50=r,0016,00
io.51=r,0016,00
io.52=r,0016,00
io.53=r,0016,00
io.54=r,0016,00
io.55=r,0016,00
io.56=r,0016,00
io.57=r,0016,00
io.58=r,0016,00
io.59=r,0016,00
io.60=r,0016,00
io.61=r,0016,00
io.62=r,0016,00
io.63=r,0016,00
io.64=r,0016,00
io.65=r,0016,00
io.66=r,0016,00
io.67=r,0016,00
io.68=r,0016,00
io.69=r,0016,00
io.70=r,0016,00
io.71=r,0016,00
io.72=r,0016,00
io.73=r,0016,00
io.74=r,0016,00
io.75=r,0016,00
io.76=r,0016,00
io.77=r,0016,00
io.78=r,0016,00
io.79=r,0016,00
io.80=r,0016,00
io.81=r,0016,00
io.82=r,0016,00
io.83=r,0016,00
io.84=r,0016,00
io.85=r,0016,00
io.86=r,0016,00
io.87=r,0016,00
io.88=r,0016,00
io.89=r,0016,00
io.90=r,0016,00
io.91=r,0016,00
io.92=r,0016,00
io.93=r,0016,00
io.94=r,0016,00
io.95=r,0016,00
io.96=r,0016,00
io.97=r,0016,00
io.98=r,0016,00
io.99=r,0016,00
io.100=r,0016,00
io.101=r,0016,00
io.102=r,0016,00
io.103=r,0016,00
io.104=r,0016,00
io.105=r,0016,00
io.106=r,0016,00
io.107=r,0016,00
io.108=r,0016,00
io.109=r,0016,00
io.110=r,0016,00
io.111=r,0016,00
io.112=r,0016,00
io.113=r,0016,00
io.114=r,0016,00
io.115=r,0016,00
io.116=r,0016,00
io.117=r,0016,00
io.118=r,0016,00
io.119=r,0016,00
io.120=r,0016,00
io.121=r,0016,00
io.122=r,0016,00
io.123=r,0016,00
io.124=r,0016,00
io.125=r,0016,00
io.126=r,0016,00
io.127=r,0016,00
io.128=r,0016,00
io.129=r,0016,00
io.130=r,0016,00
io.131=r,0016,00
io.132=r,0016,00
io.133=r,0016,00
io.134=w,a520,a5
io.135=w,4200,42
io.136=w,0011,00
io.137=w,0112,01
io.138=w,0013,00
io.139=w,0014,00
io.140=w,0015,00
io.141=w,0210,02
io.142=w,5a16,5a
io.143=w,5a16,5a
io.144=w,5a16,5a
io.145=w,5a16,5a
io.146=w,5a16,5a
io.147=w,5a16,5a
io.148=w,5a16,5a
io.149=w,5a16,5a
io.150=w,5a16,5a
io.151=w,5a16,5a
io.152=w,5a16,5a
io.153=w,5a16,5a
io.154=w,5a16,5a
io.155=w,5a16,5a
io.156=w,5a16,5a
io.157=w,5a16,5a
io.158=w,5a16,5a
io.159=w,5a16,5a
io.160=w,5a16,5a
io.161=w,5a16,5a
io.162=w,5a16,5a
io.163=w,5a16,5a
io.164=w,5a16,5a
io.165=w,5a16,5a
io.166=w,5a16,5a
io.167=w,5a16,5a
io.168=w,5a16,5a
io.169=w,5a16,5a
io.170=w,5a16,5a
io.171=w,5a16,5a
io.172=w,5a16,5a
io.173=w,5a16,5a
io.174=w,5a16,5a
io.175=w,5a16,5a
io.176=w,5a16,5a
io.177=w,5a16,5a
io.178=w,5a16,5a
io.179=w,5a16,5a
io.180=w,5a16,5a
io.181=w,5a16,5a
io.182=w,5a16,5a
io.183=w,5a16,5a
io.184=w,5a16,5a
io.185=w,5a16,5a
io.186=w,5a16,5a
io.187=w,5a16,5a
io.188=w,5a16,5a
io.189=w,5a16,5a
io.190=w,5a16,5a
io.191=w,5a16,5a
io.192=w,5a16,5a
io.193=w,5a16,5a
io.194=w,5a16,5a
io.195=w,5a16,5a
io.196=w,5a16,5a
io.197=w,5a16,5a
io.198=w,5a16,5a
io.199=w,5a16,5a
io.200=w,5a16,5a
io.201=w,5a16,5a
io.202=w,5a16,5a
io.203=w,5a16,5a
io.204=w,5a16,5a
io.205=w,5a16,5a
io.206=w,5a16,5a
io.207=w,5a16,5a
io.208=w,5a16,5a
io.209=w,5a16,5a
io.210=w,5a16,5a
io.211=w,5a16,5a
io.212=w,5a16,5a
io.213=w,5a16,5a
io.214=w,5a16,5a
io.215=w,5a16,5a
io.216=w,5a16,5a
io.217=w,5a16,5a
io.218=w,5a16,5a
io.219=w,5a16,5a
io.220=w,5a16,5a
io.221=w,5a16,5a
io.222=w,5a16,5a
io.223=w,5a16,5a
io.224=w,5a16,5a
io.225=w,5a16,5a
io.226=w,5a16,5a
io.227=w,5a16,5a
io.228=w,5a16,5a
io.229=w,5a16,5a
io.230=w,5a16,5a
io.231=w,5a16,5a
io.232=w,5a16,5a
io.233=w,5a16,5a
io.234=w,5a16,5a
io.235=w,5a16,5a
io.236=w,5a16,5a
io.237=w,5a16,5a
io.238=w,5a16,5a
io.239=w,5a16,5a
io.240=w,5a16,5a
io.241=w,5a16,5a
io.242=w,5a16,5a
io.243=w,5a16,5a
io.244=w,5a16,5a
io.245=w,5a16,5a
io.246=w,5a16,5a
io.247=w,5a16,5a
io.248=w,5a16,5a
io.249=w,5a16,5a
io.250=w,5a16,5a
io.251=w,5a16,5a
io.252=w,5a16,5a
io.253=w,5a16,5a
io.254=w,5a16,5a
io.255=w,5a16,5a
io.256=w,5a16,5a
io.257=w,5a16,5a
io.258=w,5a16,5a
io.259=w,5a16,5a
io.260=w,5a16,5a
io.261=w,5a16,5a
io.262=w,5a16,5a
io.263=w,5a16,5a
io.264=w,5a16,5a
io.265=w,5a16,5a
io.266=w,5a16,5a
io.267=w,5a16,5a
io.268=w,5a16,5a
io.269=w,5a16,5a
io.270=w,0310,03
io.271=w,5000,50
"
`;

exports[`Triptych CPU language-neutral conformance > matches 'flags-conditional-timing' > flags-conditional-timing 1`] = `
"triptych-cpu-result-v1
fixture=flags-conditional-timing
stop=halt
steps=4
tstates=27
boot-rom-enabled=1
cpu.a=0
cpu.f.c=0
cpu.f.h=0
cpu.f.n=0
cpu.f.p=1
cpu.f.s=0
cpu.f.x=0
cpu.f.y=0
cpu.f.z=1
cpu.halted=1
cpu.pc=8
ram-sha256=de2f256064a0af797747c2b97505dc0b9f3df0de4f489eac731c23ae9ca9cc31
drives=0
serial=
"
`;

exports[`Triptych CPU language-neutral conformance > matches 'interrupt-im1' > interrupt-im1 1`] = `
"triptych-cpu-result-v1
fixture=interrupt-im1
stop=halt
steps=6
tstates=50
boot-rom-enabled=1
cpu.a=90
cpu.halted=1
cpu.iff1=0
cpu.iff2=0
cpu.imode=1
cpu.pc=59
cpu.sp=36862
ram-sha256=263ee63703197677fecbc6264edcb4ac13620aedb2872f284f1929c19d967757
ram.8ffe=0700
drives=0
serial=
"
`;

exports[`Triptych CPU language-neutral conformance > matches 'reset-defined-state' > reset-defined-state 1`] = `
"triptych-cpu-result-v1
fixture=reset-defined-state
stop=halt
steps=1
tstates=4
boot-rom-enabled=1
cpu.halted=1
cpu.iff1=0
cpu.iff2=0
cpu.imode=0
cpu.pc=1
ram-sha256=de2f256064a0af797747c2b97505dc0b9f3df0de4f489eac731c23ae9ca9cc31
ram.0000=00
drives=0
serial=
"
`;

exports[`Triptych CPU language-neutral conformance > matches 'serial-read-order' > serial-read-order 1`] = `
"triptych-cpu-result-v1
fixture=serial-read-order
stop=halt
steps=4
tstates=33
boot-rom-enabled=1
cpu.a=66
cpu.halted=1
cpu.pc=7
ram-sha256=de2f256064a0af797747c2b97505dc0b9f3df0de4f489eac731c23ae9ca9cc31
drives=0
serial=
io.0=r,1201,03
io.1=r,0300,42
"
`;
